# Labs

./: .gitignore  README.md
3rd Semester/LogProg/1lab/: var11.pl
3rd Semester/LogProg/kp/: gen.cpp
3rd Semester/OOP/lab1/: main.cpp  pryam.h  trap.cpp  trap.h
3rd Semester/OOP/lab2/: TListItem.h  makefile  square.cpp
3rd Semester/OOP/lab3/: Pasha
3rd Semester/OOP/lab4/: TList.h
3rd Semester/OOP/lab5/: TList.cpp  main.cpp
3rd Semester/OOP/lab6/: TAllocator.h  makefile
3rd Semester/OOP/lab7/: TIterator.hpp  TList.h  figure.h  makefile  square.cpp  trap.h
3rd Semester/OOP/lab9/: Mmmm  square.h
3rd Semester/OpSys/: a.out  test.c
3rd Semester/OpSys/2lab/: main.c  makefile
3rd Semester/OpSys/4lab/: makefile
3rd Semester/OpSys/5lab/: makefile
3rd Semester/OpSys/6lab/: bst.h  client
3rd Semester/Struct/Aho/: AC.h  Aho  makefile
3rd Semester/Struct/PatriciaIsLovePatriciaIsLife/: benchmark  helloworld  main.cpp  makefile  meme  meme2  meme3  meme4  mems  mems2  out  outFlat  outFlatNoBit
3rd Semester/Struct/RadixSort/: sort.cpp  sort.h
3rd Semester/Struct/SuffTree/: SuffTree.cpp
3rd Semester/Struct/Tests/: heil  helloworld  help  herp  herpes  meme4  mymem  mytree  test  two
3rd_semester/LogProg/kp/: db.pl  family_tree.ged
3rd_semester/OOP/lab1/: figure.h
3rd_semester/OOP/lab2/: TList.cpp  TList.h  main.cpp
3rd_semester/OOP/lab3/: TList.h  figure.h  main.cpp
3rd_semester/OOP/lab4/: Simon  TList.hpp  main.cpp  makefile  trap.h
3rd_semester/OOP/lab5/: Nikon  TList.h
3rd_semester/OOP/lab6/: Mmmm  TList.hpp  trap.h
3rd_semester/OOP/lab7/: Mmmm  TList.hpp  TTree.h  TTree.hpp  main.cpp
3rd_semester/OOP/lab8/: Mmmm  TList.h  TList.hpp
3rd_semester/OOP/lab9/: #TList.h#  TList.hpp  TNode.h  TTree.h  (+2 more)
5th_semester/CG/1_lab/: CMakeLists.txt
5th_semester/CG/1_lab/include/: Lab01Widget.hpp
5th_semester/CG/1_lab/src/: Lab01Widget.cpp  main.cpp
5th_semester/CG/2_lab/: CMakeLists.txt
5th_semester/CG/2_lab/include/: GeometryEngine.hpp  MyWidget.hpp
5th_semester/CG/2_lab/src/: GeometryEngine.cpp  MyWidget.cpp  main.cpp
5th_semester/CG/SettingsWidget/: CMakeLists.txt
5th_semester/CG/SettingsWidget/src/: SettingsAttr.cpp  SettingsWidget.hpp
6th_semester/AI_ML/: 2_lab.py
LogProg/: kp.pl
LogProg/1lab/: var11.pl
LogProg/2lab/: var2.pl
LogProg/3lab/: var2.pl
LogProg/kp/: CP.pl  a.out  kp.pl
OOP/lab1/: anton  makefile  pryam.cpp  square.cpp  square.h
OOP/lab2/: Dima  TListItem.cpp  square.h
OOP/lab3/: Pasha  makefile  pryam.h
OOP/lab4/: Simon  TList.cpp  TList.h  TList.hpp  figure.h  main.cpp
OOP/lab5/: #TIterator.hpp#  Nikon  TIterator.hpp  TList.h  iterator.h  main.cpp  makefile  pryam.cpp  pryam.h  trap.cpp
OOP/lab6/: Mmmm  TAllocator.cpp  TList.h  TList.hpp
OOP/lab7/: Mmmm  pryam.h
OOP/lab8/: Mmmm  TList.hpp  main.cpp
OOP/lab9/: Mmmm  TList.h  TList.hpp  TTree.h  TTree.hpp  figure.h  main.cpp  trap.cpp
OpSys/1lab/: 1lab  prot
OpSys/2lab/: lab2  test
OpSys/3lab/: main.c  one
OpSys/4lab/: #general.c#  123  4lab  file.txt  general.h  main.c  test
OpSys/5lab/: libctest.so.1.0  lmao  main.c  main1.c  meme
OpSys/6lab/: bst.c  bst.h  client  client.c  db  server  server.c  test
OpSys/kp/: client.js  server.js  settings.json
Struct/Aho/: Bench  main.cpp
Struct/PatriciaIsLovePatriciaIsLife/: .#out  PatriciaIsLovePatriciaIsLife  bench.cpp  benchmark  gmon.out  herpes  patricia.cpp
Struct/RadixSort/: Makefile  vector.cpp
Struct/SuffTree/: Bench  SuffTree  bench.cpp  main.cpp  makefile
(+107 files in other folders)
